poprawienie Upload file.

--- a/CrystalSiege/CrystalSiege/CrystalSiege.csproj
+++ b/CrystalSiege/CrystalSiege/CrystalSiege.csproj
@@ -287,6 +287,11 @@
       <DependentUpon>damianlukasik3612_crystalsiegeEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -1297,6 +1302,10 @@
     <None Include="Project_Readme.html" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\CarouselTexts.pl.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>CarouselTexts.pl.Designer.cs</LastGenOutput>
