--- a/CrystalSiege/CrystalSiege/Web.config
+++ b/CrystalSiege/CrystalSiege/Web.config
@@ -30,7 +30,7 @@
   </system.web>
   -->
   <system.web>
-    <customErrors mode="Off"/>
+    <customErrors mode="RemoteOnly"/>
     <compilation debug="true"/>
     <authentication mode="None"/>
   </system.web>
