--- a/CrystalSiege/CrystalSiege/Web.config
+++ b/CrystalSiege/CrystalSiege/Web.config
@@ -11,18 +11,18 @@
   <connectionStrings>
     
       <!-- przełańczanie między localhostem, a stroną -->
-   
+    <!-- 
     <add 
       name="Website" 
       connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApplication1-20170625081450.mdf;Initial Catalog=aspnet-WebApplication1-20170625081450;Integrated Security=True" 
       providerName="System.Data.SqlClient" />
 
-  
-  <!-- 
+  -->
+ 
     <add
       name="Website"
       connectionString="Data Source=mssql5.webio.pl,2401;Initial Catalog=damianlukasik3612_crystalsiege;Persist Security Info=True;User ID=damianlukasik3612_user_crystalsiege;Password=*^r3bn7cBIR ^FiER#2;MultipleActiveResultSets=True;Application Name=EntityFramework"
-      providerName="System.Data.SQLClient" />-->
+      providerName="System.Data.SQLClient" />
       
       <add name="damianlukasik3612_crystalsiegeEntities"
         connectionString="metadata=res://*/Models.damianlukasik3612_crystalsiegeEntities.csdl|res://*/Models.damianlukasik3612_crystalsiegeEntities.ssdl|res://*/Models.damianlukasik3612_crystalsiegeEntities.msl;provider=System.Data.SqlClient;provider connection string='data source=mssql5.webio.pl,2401;initial catalog=damianlukasik3612_crystalsiege;persist security info=True;user id=damianlukasik3612_user_crystalsiege;password=&quot;*^r3bn7cBIR ^FiER#2&quot;;MultipleActiveResultSets=True;App=EntityFramework'"
@@ -39,17 +39,17 @@
   <system.web>
     <customErrors mode="RemoteOnly" />
     <compilation debug="true" />
-  </system.web>
-  -->
+  </system.web>-->
+  
   <system.web>
     <customErrors mode="RemoteOnly"/>
     <compilation debug="true"/>
     <authentication mode="None"/>
   </system.web>
- <!--
+ <!-- 
   <system.web>
-    <compilation debug="true" targetFramework="4.0" />
-  </system.web>   -->
+    <customErrors mode="Off"/>
+  </system.web> -->
   
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true">
